# rustle

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  docker-compose.yml  rustle_postman_collection.json
bash/: build.sh  log.sh  restart.sh
migrations/: 20250331223354_setup.sql  20250403203546_initial_tables.sql
src/: app_state.rs  config.rs  constants.rs  extensions.rs  main.rs  types.rs
src/controllers/: auth.rs  comment.rs  mod.rs  post.rs  upload.rs  user.rs
src/core/: mod.rs
src/core/error/: http_error.rs
src/core/extractors/: json.rs
src/core/layers/: auth_layer.rs  error_layer.rs  mod.rs
src/core/services/: mod.rs
src/core/services/mail/: mod.rs
src/core/services/s3/: mod.rs
src/core/services/storage/: disk.rs  mod.rs  s3.rs
src/core/utils/: jwt.rs  pin.rs
src/ctx/: mod.rs
src/ctx/extractors/: auth_user.rs
src/ctx/layers/: auth_layer.rs  error_layer.rs
src/ctx/services/mail/: mod.rs
src/ctx/services/s3/: mod.rs
src/ctx/utils/: mod.rs
src/dtos/: auth.rs  comment.rs  post.rs  user.rs
src/models/: error.rs  mod.rs  user.rs
src/repositories/: user.rs
src/router/: auth.rs  comment.rs  mod.rs  post.rs  upload.rs  user.rs
src/service/: comment.rs  mod.rs  post.rs  user.rs  verification_pin.rs
