[package]
name = "web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.1" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["timeout", "trace", "cors"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.115"
jsonwebtoken = { version = "9.3.1" }
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
anyhow = "1.0.97"
dotenv = "0.15.0"
lettre = { version = "0.11.15" }
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.0"


[profile.dev]

[profile.release]

[profile.test]

[profile.bench]
